выполнен третий этап лр